--- a/packages/core/test/test.html
+++ b/packages/core/test/test.html
@@ -1,12 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width">
-<title>Robot tests</title>
-<link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.9.2.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width" />
+  <title>Robot tests</title>
+  <link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.9.2.css" />
 
-<div id="qunit"></div>
-<div id="qunit-fixture"></div>
-<script src="https://code.jquery.com/qunit/qunit-2.9.2.js"></script>
-<script type="module" src="../debug.js"></script>
-<script type="module" src="./test.js"></script>
+  <div id="qunit"></div>
+  <div id="qunit-fixture"></div>
+  <script src="https://code.jquery.com/qunit/qunit-2.9.2.js"></script>
+  <script type="module" src="../debug.js"></script>
+  <script type="module" src="./test.js"></script>
+</html>
